--- a/presentation/main.tex
+++ b/presentation/main.tex
@@ -62,16 +62,18 @@
 \usepackage{graphicx}  % Required for including images
 
 \usepackage{booktabs} % Top and bottom rules for tables
-\usepackage[backend=biber,style=alphabetic,citestyle=authoryear]{biblatex}
+\usepackage[backend=biber,style=authoryear,citestyle=authoryear]{biblatex}
 \addbibresource{presentation_bib.bib}
 \usepackage{framed}
 \usepackage{multicol}
+
+\newcommand{\bb}[1]{\textbf{#1}}
 
 %----------------------------------------------------------------------------------------
 % TITLE SECTION 
 %----------------------------------------------------------------------------------------
 
-\title{Fine-Grained Opinion Tagging Using Deep Recurrent Nets with GRUs} % Poster title
+\title{Opinion Tagging Using Deep Recurrent Nets with GRUs} % Poster title
 
 \author{Alex Adamson and Deger Turan} % Author(s)
 
@@ -89,10 +91,10 @@
 \makeatother
 
 \addtobeamertemplate{block end}{}{\vspace*{2ex}} % White space under blocks
-\addtobeamertemplate{block alerted end}{}{\vspace*{2ex}} % White space under highlighted (alert) blocks
+\addtobeamertemplate{block alerted end}{}{\vspace*{1ex}} % White space under highlighted (alert) blocks
 
-\setlength{\belowcaptionskip}{2ex} % White space under figures
-\setlength\belowdisplayshortskip{2ex} % White space under equations
+\setlength{\belowcaptionskip}{1ex} % White space under figures
+\setlength\belowdisplayshortskip{1ex} % White space under equations
 
 \begin{frame}[t] % The whole poster is enclosed in one beamer frame
 
@@ -101,20 +103,6 @@
 \begin{column}{\sepwid}\end{column} % Empty spacer column
 
 \begin{column}{\onecolwid} % The first column
-
-%----------------------------------------------------------------------------------------
-% OBJECTIVES
-%----------------------------------------------------------------------------------------
-
-\begin{alertblock}{Objectives}
-
-Lorem ipsum dolor sit amet, consectetur, nunc tellus pulvinar tortor, commodo eleifend risus arcu sed odio:
-\begin{itemize}
-\item Mollis dignissim, magna augue tincidunt dolor, interdum vestibulum urna
-\item Sed aliquet luctus lectus, eget aliquet leo ullamcorper consequat. Vivamus eros sem, iaculis ut euismod non, sollicitudin vel orci.
-\end{itemize}
-
-\end{alertblock}
 
 %----------------------------------------------------------------------------------------
 % INTRODUCTION
@@ -133,6 +121,21 @@ The fine-grained opinion mining task seeks to, given textual input, find the opi
 \caption{Taken from \cite{irsoy2014opinion}: Clockwise from top left: single-layer recurrent neural network, single-layer bidirectional recurrent neural network, deep bidirectional recurrent neural network, deep recurrent neural neural network. Forward layers are denoted with solid lines and backward layers are denoted with dotted lines. Input layers, hidden layers and output layers are shown in black, orange and red respectively.}
 \label{bidrnn-fig}
 \end{figure}
+
+%----------------------------------------------------------------------------------------
+
+%----------------------------------------------------------------------------------------
+% APPLICATIONS
+%----------------------------------------------------------------------------------------
+
+\begin{alertblock}{Applications}
+
+\begin{itemize}
+\item Refined automated trading (e.g., scale importance of opinion to potential trade based on the credibility of its holder)
+\item Accelerated parsing of open-ended public polling
+\end{itemize}
+
+\end{alertblock}
 
 %----------------------------------------------------------------------------------------
 
@@ -177,21 +180,21 @@ We use the MPQA 2.0 dataset (\cite{wiebe2005annotating}). The dataset consists o
 The models we constructed and evaluated include a softmax regression baseline, the deep bidirectional recurrent network described and implemented by Ozan Irsoy (\cite{irsoy2014opinion}), and an extension of Irsoy's network that used gated recurrent units instead of ReLU nonlinearities. In particular, whereas Irsoy's model uses the following definition for his interior hidden units
 
 \begin{framed}
-\begin{align}
+\begin{align*}
   \overrightarrow{h}_t^{(i)} &= f(\underrightarrow{\overrightarrow{W}}^{(i)} \overrightarrow{h}_t^{(i-1)} + \underleftarrow{\overrightarrow{W}}^{(i)} \overleftarrow{h}_t^{(i-1)} + \overrightarrow{V}^{(i)} \overrightarrow{h}_{t-1}^{(i)} + \overrightarrow{b}^{(i)}) \\
   \overleftarrow{h}_t^{(i)} &= f(\underrightarrow{\overleftarrow{W}}^{(i)} \overrightarrow{h}_t^{(i-1)} + \underleftarrow{\overleftarrow{W}}^{(i)} \overleftarrow{h}_t^{(i-1)} + \overleftarrow{V}^{(i)} \overleftarrow{h}_{t=1}^{(i)} + \overleftarrow{b}^{(i)})
-\end{align}
+\end{align*}
 \end{framed}
 
 the GRU model uses
 
 \begin{framed}
-\begin{align}
+\begin{align*}
   \overrightarrow{z}_t^{(i)} &= f_2(\underrightarrow{\overrightarrow{Wz}}^{(i)} \overrightarrow{h}_t^{(i-1)} + \underleftarrow{\overrightarrow{Wz}}^{(i)} \overleftarrow{h}_t^{(i-1)} + \overrightarrow{Vz}^{(i)} \overrightarrow{h}_{t-1}^{(i)}) \\
   \overrightarrow{r}_t^{(i)} &= f_2(\underrightarrow{\overrightarrow{Wr}}^{(i)} \overrightarrow{h}_t^{(i-1)} + \underleftarrow{\overrightarrow{Wr}}^{(i)} \overleftarrow{h}_t^{(i-1)} + \overrightarrow{Vr}^{(i)} \overrightarrow{h}_{t-1}^{(i)}) \\
   \widetilde{\overrightarrow{h}}_t^{(i)} &= f(\underrightarrow{\overrightarrow{W}}^{(i)} \overrightarrow{h}_t^{(i-1)} + \underleftarrow{\overrightarrow{W}}^{(i)} \overleftarrow{h}_t^{(i-1)} + \overrightarrow{r}_t^{(i)} \circ \overrightarrow{V}^{(i)} \overrightarrow{h}_{t-1}^{(i)}) \\
   \overrightarrow{h}_t^{(i)} &= \overrightarrow{z}_t^{(i)} \circ \overrightarrow{h}_{t-1}^{(i)} + (1 - \overrightarrow{z}_t^{(i)}) \circ \widetilde{\overrightarrow{h}}_t^{(i)}
-\end{align}
+\end{align*}
 and analogously for the right-to-left units.
 \end{framed}
 
@@ -211,16 +214,6 @@ With these modifications, the models would generally converge without significan
 
 \end{column} % End of column 2.2
 
-%----------------------------------------------------------------------------------------
-% IMPORTANT RESULT
-%----------------------------------------------------------------------------------------
-
-\begin{alertblock}{Important Result}
-
-Lorem ipsum dolor \textbf{sit amet}, consectetur adipiscing elit. Sed commodo molestie porta. Sed ultrices scelerisque sapien ac commodo. Donec ut volutpat elit.
-
-\end{alertblock} 
-
 \end{column} % End of the second column
 
 \begin{column}{\sepwid}\end{column} % Empty spacer column
@@ -233,16 +226,29 @@ Lorem ipsum dolor \textbf{sit amet}, consectetur adipiscing elit. Sed commodo mo
 
 \begin{block}{Results}
 
-\begin{tabular}{r | l r | c c | c c | c c |} \cline{2-9}
-                 & Model & $|h|$ & \multicolumn{2}{|c|}{Precision} & \multicolumn{2}{|c|}{Recall} & \multicolumn{2}{|c|}{F1} \\ \cline{2-9}
-                 &       &       & Prop. & Bin.  & Prop. & Bin.  & Prop. & Bin. \\ \cline{2-9}
-\small{Agent}    & DRNN  & 25    & 0.653 & 0.675 & 0.707 & 0.746 & 0.679 & 0.709 \\
-                 & GRU   & 25    & 0.632 & 0.661 & 0.675 & 0.722 & 0.653 & 0.690  \\ \cline{2-9}
-\small{Attitude} & DRNN  & 25    & 0.276 & 0.344 & 0.625 & 0.733 & 0.383 & 0.468 \\
-                 & GRU   & 25    & 0.291 & 0.360 & 0.575 & 0.672 & 0.386 & 0.469  \\ \cline{2-9}
-\small{Target}   & DRNN  & 25    & 0.243 & 0.280 & 0.398 & 0.514 & 0.302 & 0.362 \\
-                 & GRU   & 25    & 0.266 & 0.320 & 0.343 & 0.447 & 0.300 & 0.373  \\ \cline{2-9}
+\begin{table}[h]
+\centering
+\small
+\begin{tabular}{r | l | c c | c c | c c |} \cline{2-8}
+         & Model & \multicolumn{2}{|c|}{Precision} & \multicolumn{2}{|c|}{Recall} & \multicolumn{2}{|c|}{F1} \\ \cline{2-8}
+         &       & Prop. & Bin.  & Prop. & Bin.  & Prop. & Bin. \\ \cline{2-8}
+%----------------------------------------------------------------------------------------
+Agent    & SR    & 0.422      & 0.426      & 0.333      & 0.482      & 0.333      & 0.452      \\
+         & DRNN  & \bb{0.653} & \bb{0.675} & \bb{0.707} & \bb{0.746} & \bb{0.679} & \bb{0.709} \\
+         & GRU   & 0.632      & 0.661      & 0.675      & 0.722      & 0.653      & 0.690      \\ \cline{2-8}
+%----------------------------------------------------------------------------------------                  
+Attitude & SR    & \bb{0.339} & 0.341      & 0.192      & 0.544      & 0.245      & 0.419      \\
+         & DRNN  & 0.276      & 0.344      & \bb{0.625} & \bb{0.733} & 0.383      & 0.468      \\
+         & GRU   & 0.291      & \bb{0.360} & 0.575      & 0.672      & \bb{0.386} & \bb{0.469} \\ \cline{2-8}
+%----------------------------------------------------------------------------------------
+Target   & SR    & 0.230      & 0.230      & 0.040      & 0.125      & 0.069      & 0.162      \\
+         & DRNN  & 0.243      & 0.280      & \bb{0.398} & \bb{0.514} & \bb{0.302} & 0.362      \\
+         & GRU   & \bb{0.266} & \bb{0.320} & 0.343      & 0.447      & 0.300      & \bb{0.373} \\ \cline{2-8}
 \end{tabular}
+\caption{Results for models from gridsearch over $\lambda$, dropout rate and null-class weight. All models have 25-dimensional hidden units and use the GloVe 300-dimensional Common Crawl embeddings.}
+\end{table}
+
+We found that introducing the GRUs generally improved performance by a small amount, and that the amount of improvement scaled with the ``hardness'' of the classification problem, suggesting that the GRU enables the model to learn some abstractions that the vanilla network could not. We had hoped that the GRU network would always outperform the deep RNN considering the models considered when training the GRU include those considered when training the deep RNN (to see this, consider what happens when we set $Wz$ and $Vz$ arbitrarily low and $Wr$ and $Vr$ arbitrarily high).
 
 \end{block}
 
@@ -255,41 +261,6 @@ Lorem ipsum dolor \textbf{sit amet}, consectetur adipiscing elit. Sed commodo mo
 \printbibliography
 
 \end{block}
-
-%----------------------------------------------------------------------------------------
-% ACKNOWLEDGEMENTS
-%----------------------------------------------------------------------------------------
-
-\setbeamercolor{block title}{fg=red,bg=white} % Change the block title color
-
-\begin{block}{Acknowledgements}
-
-\small{\rmfamily{Nam mollis tristique neque eu luctus. Suspendisse rutrum congue nisi sed convallis. Aenean id neque dolor. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.}} \\
-
-\end{block}
-
-%----------------------------------------------------------------------------------------
-% CONTACT INFORMATION
-%----------------------------------------------------------------------------------------
-
-\setbeamercolor{block alerted title}{fg=black,bg=norange} % Change the alert block title colors
-\setbeamercolor{block alerted body}{fg=black,bg=white} % Change the alert block body colors
-
-\begin{alertblock}{Contact Information}
-
-\begin{itemize}
-\item Web: \href{http://www.university.edu/smithlab}{http://www.university.edu/smithlab}
-\item Email: \href{mailto:john@smith.com}{john@smith.com}
-\item Phone: +1 (000) 111 1111
-\end{itemize}
-
-\end{alertblock}
-
-\begin{center}
-\begin{tabular}{ccc}
-\includegraphics[width=0.4\linewidth]{logo.png} & \hfill & \includegraphics[width=0.4\linewidth]{logo.png}
-\end{tabular}
-\end{center}
 
 %----------------------------------------------------------------------------------------
 
